--- a/kontakt.html
+++ b/kontakt.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html><!--  This site was created in Webflow. https://webflow.com  --><!--  Last Published: Fri May 02 2025 14:21:41 GMT+0000 (Coordinated Universal Time)  -->
+<!DOCTYPE html><!--  This site was created in Webflow. https://webflow.com  --><!--  Last Published: Fri May 02 2025 20:59:53 GMT+0000 (Coordinated Universal Time)  -->
 <html data-wf-page="6597ddbf1e6491a6bf535dd5" data-wf-site="64b8d3c3e7ffc183ddfa8a14" lang="cs">
 <head>
   <meta charset="utf-8">
@@ -358,7 +358,7 @@ margin: 0rem !important;
             <div class="container-medium">
               <div class="contact_content">
                 <div class="contact_card">
-                  <div class="text-size-regular text-style-allcaps purple-text">(Zavolejte)</div>
+                  <div class="text-size-regular text-style-allcaps purple-text">(Zavolejte mi )</div>
                   <a href="#" class="contact_cta-text">+420 721 670 478</a>
                 </div>
                 <div class="contact_card">
