--- a/portfolio.html
+++ b/portfolio.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html><!--  This site was created in Webflow. https://webflow.com  --><!--  Last Published: Fri May 02 2025 14:21:41 GMT+0000 (Coordinated Universal Time)  -->
+<!DOCTYPE html><!--  This site was created in Webflow. https://webflow.com  --><!--  Last Published: Fri May 02 2025 20:59:53 GMT+0000 (Coordinated Universal Time)  -->
 <html data-wf-page="6597ddbf1e6491a6bf535dd7" data-wf-site="64b8d3c3e7ffc183ddfa8a14" lang="cs">
 <head>
   <meta charset="utf-8">
@@ -397,7 +397,7 @@ margin: 0rem !important;
             <div class="swiper-wrapper">
               <div class="swiper-slide">
                 <div class="ratio-box _3-2">
-                  <a data-w-id="9fcb631d-9f5a-2046-9676-f16c2256d3ea" href="projekt-probinex.html" class="portfolio-card w-inline-block">
+                  <a data-w-id="9fcb631d-9f5a-2046-9676-f16c2256d3ea" href="projekt-esty.html" class="portfolio-card w-inline-block">
                     <div class="bg_image">
                       <div data-poster-url="videos/esty-cover-poster-00001.jpg" data-video-urls="videos/esty-cover-transcode.mp4,videos/esty-cover-transcode.webm" data-autoplay="true" data-loop="true" data-wf-ignore="true" data-w-id="ef9e517d-da22-01ed-970d-5c4cb2691ab5" class="portfolio-cover w-background-video w-background-video-atom"><video id="ef9e517d-da22-01ed-970d-5c4cb2691ab5-video" autoplay="" loop="" style="background-image:url(&quot;videos/esty-cover-poster-00001.jpg&quot;)" muted="" playsinline="" data-wf-ignore="true" data-object-fit="cover">
                           <source src="videos/esty-cover-transcode.mp4" data-wf-ignore="true">
@@ -423,7 +423,7 @@ margin: 0rem !important;
               </div>
               <div class="swiper-slide">
                 <div class="ratio-box _3-2">
-                  <a data-w-id="728c2c2f-85f0-8976-58c1-0459c521f04a" href="projekt-probinex.html" class="portfolio-card w-inline-block">
+                  <a data-w-id="728c2c2f-85f0-8976-58c1-0459c521f04a" href="projekt-dubai-reality.html" class="portfolio-card w-inline-block">
                     <div class="bg_image"><img src="images/Dubai_Cover_1.avif" loading="eager" data-w-id="728c2c2f-85f0-8976-58c1-0459c521f04c" sizes="(max-width: 2000px) 100vw, 2000px" alt="Probinex náhled" srcset="images/Dubai_Cover_1Dubai_Cover.avif 500w, images/Dubai_Cover_1Dubai_Cover.avif 800w, images/Dubai_Cover_1Dubai_Cover.avif 1080w, images/Dubai_Cover_1Dubai_Cover.avif 1600w, images/Dubai_Cover_1.avif 2000w" class="portfolio-cover">
                       <div class="portfolio-overlay">
                         <div class="text-overlay">
@@ -454,7 +454,7 @@ margin: 0rem !important;
               </div>
               <div class="swiper-slide">
                 <div class="ratio-box _3-2">
-                  <a data-w-id="ea42d49a-0773-60c8-2f90-ec2a4010f4ab" href="projekt-probinex.html" class="portfolio-card w-inline-block">
+                  <a data-w-id="ea42d49a-0773-60c8-2f90-ec2a4010f4ab" href="projekt-bitbeli.html" class="portfolio-card w-inline-block">
                     <div class="bg_image"><img src="images/Bitbeli_3D_3.avif" loading="eager" data-w-id="ea42d49a-0773-60c8-2f90-ec2a4010f4ad" sizes="(max-width: 2500px) 100vw, 2500px" alt="Probinex náhled" srcset="images/Bitbeli_3D_3Bitbeli_3D_02.avif 500w, images/Bitbeli_3D_3Bitbeli_3D_02.avif 800w, images/Bitbeli_3D_3Bitbeli_3D_02.avif 1080w, images/Bitbeli_3D_3.avif 2500w" class="portfolio-cover">
                       <div class="portfolio-overlay">
                         <div class="text-overlay">
@@ -485,7 +485,7 @@ margin: 0rem !important;
               </div>
               <div class="swiper-slide">
                 <div class="ratio-box _3-2">
-                  <a data-w-id="79deb36d-e0a0-71ea-66f6-b677777574cb" href="projekt-probinex.html" class="portfolio-card w-inline-block">
+                  <a data-w-id="79deb36d-e0a0-71ea-66f6-b677777574cb" href="projekt-colosseum-ticket.html" class="portfolio-card w-inline-block">
                     <div class="bg_image"><img src="images/Colosseum_poster_1.avif" loading="eager" data-w-id="79deb36d-e0a0-71ea-66f6-b677777574cd" sizes="(max-width: 2000px) 100vw, 2000px" alt="Probinex náhled" srcset="images/Colosseum_poster_1Colosseum_poster.avif 500w, images/Colosseum_poster_1Colosseum_poster.avif 800w, images/Colosseum_poster_1Colosseum_poster.avif 1080w, images/Colosseum_poster_1.avif 2000w" class="portfolio-cover">
                       <div class="portfolio-overlay">
                         <div class="text-overlay">
@@ -947,6 +947,7 @@ if (Webflow.env("editor") === undefined) {
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css">
   <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
   <script>
+if (window.innerWidth >= 768) {
   // Inicializace textového slideru jako první (musí existovat před použitím v mainSwiper.on)
   const textSwiper = new Swiper('.slider-titles_component', {
     slidesPerView: 'auto',
