--- a/portfolio.html
+++ b/portfolio.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html><!--  This site was created in Webflow. https://webflow.com  --><!--  Last Published: Fri May 02 2025 20:59:53 GMT+0000 (Coordinated Universal Time)  -->
+<!DOCTYPE html><!--  This site was created in Webflow. https://webflow.com  --><!--  Last Published: Fri May 02 2025 21:05:50 GMT+0000 (Coordinated Universal Time)  -->
 <html data-wf-page="6597ddbf1e6491a6bf535dd7" data-wf-site="64b8d3c3e7ffc183ddfa8a14" lang="cs">
 <head>
   <meta charset="utf-8">
@@ -394,7 +394,7 @@ margin: 0rem !important;
 </style>
           </div>
           <div class="swiper-container">
-            <div class="swiper-wrapper">
+            <div class="swiper-wrapper is-list">
               <div class="swiper-slide">
                 <div class="ratio-box _3-2">
                   <a data-w-id="9fcb631d-9f5a-2046-9676-f16c2256d3ea" href="projekt-esty.html" class="portfolio-card w-inline-block">
