--- a/portfolio.html
+++ b/portfolio.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html><!--  This site was created in Webflow. https://webflow.com  --><!--  Last Published: Fri May 02 2025 21:05:50 GMT+0000 (Coordinated Universal Time)  -->
+<!DOCTYPE html><!--  This site was created in Webflow. https://webflow.com  --><!--  Last Published: Fri May 02 2025 21:11:18 GMT+0000 (Coordinated Universal Time)  -->
 <html data-wf-page="6597ddbf1e6491a6bf535dd7" data-wf-site="64b8d3c3e7ffc183ddfa8a14" lang="cs">
 <head>
   <meta charset="utf-8">
@@ -458,7 +458,7 @@ margin: 0rem !important;
                     <div class="bg_image"><img src="images/Bitbeli_3D_3.avif" loading="eager" data-w-id="ea42d49a-0773-60c8-2f90-ec2a4010f4ad" sizes="(max-width: 2500px) 100vw, 2500px" alt="Probinex náhled" srcset="images/Bitbeli_3D_3Bitbeli_3D_02.avif 500w, images/Bitbeli_3D_3Bitbeli_3D_02.avif 800w, images/Bitbeli_3D_3Bitbeli_3D_02.avif 1080w, images/Bitbeli_3D_3.avif 2500w" class="portfolio-cover">
                       <div class="portfolio-overlay">
                         <div class="text-overlay">
-                          <h2 data-w-id="ea42d49a-0773-60c8-2f90-ec2a4010f4b0" class="heading-style-h2_portfolio">Dubai Reality</h2>
+                          <h2 data-w-id="ea42d49a-0773-60c8-2f90-ec2a4010f4b0" class="heading-style-h2_portfolio">Bitbeli</h2>
                         </div>
                       </div>
                     </div>
